--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.451.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.2",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
