fix(docs): update .env.sample comment

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,3 @@
-# Get database URI from https://cloud.mongodb.com/ cluster
-DATABASE_URI=
+DATABASE_URI= # Get database URI from https://cloud.mongodb.com/cluster
 DATABASE_NAME=
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
