--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 DATABASE_URI= # Get database URI from https://cloud.mongodb.com/cluster
 DATABASE_NAME=
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+BASE_URL="http://localhost:3000"
