fix(config): add type checking job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,19 @@ jobs:
         run: npm install --immutable
       - name: Lint and Format code
         run: npm run lint && npm run format
-  dependencies:
+  type-check:
+    name: Type checking
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out files from GitHub
+        uses: actions/checkout@v4.1.7
+      - name: Set up Node.js
+        uses: actions/setup-node@v4.0.3
+      - name: Install dependencies
+        run: npm install --immutable
+      - name: Run TypeScript type check
+        run: npx tsc --noEmit
+  dependency-check:
     name: Check dependencies
     runs-on: ubuntu-latest
     steps:
