--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
     "prettier": "^3.7.4",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0",
+      "next@>=13.3.0 <14.2.34": ">=14.2.34",
+      "next@>=13.3.1-canary.0 <14.2.35": ">=14.2.35"
+    }
   }
 }
