--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lucide-react": "^0.451.0",
     "mongodb": "^6.21.0",
     "mongoose": "^9.1.1",
-    "next": "14.2.32",
+    "next": ">=14.2.35",
     "next-themes": "^0.3.0",
     "qss": "^3.0.0",
     "react": "^18.3.1",
